--- a/css/style1.css
+++ b/css/style1.css
@@ -43,6 +43,7 @@ header h2 {
   font-size: 80px;
   text-align: center;
 	margin-bottom: 30px;
+  color: #27ae60;
 }
 header h4 {
   font-family: 'Pacifico';
