--- a/css/style1.css
+++ b/css/style1.css
@@ -23,13 +23,19 @@
   bottom: 0;
   left: 0;
   opacity: .8;
-  /* height: 100vh; */
+  height: 100vh;
   z-index: 0;
  
   background-image: url(../img/puung3.jpg);
   background-size: contain;
+  width: 100wh;
   
   
+}
+@media only screen and (max-width: 1000px) {
+  #bg{
+    background-repeat: no-repeat;
+  }
 }
 .swal2-title, .swal2-content{
   color: azure !important;
